# MyEigen

./: CMakeLists.txt  EigenLidan.h  README.md  main.cpp
datatype/: erf.h
solveMatrix/: Gauss-Jorban.h  LUdcomp.cpp  LUdcomp.h
